--- a/Payroll_/App.config
+++ b/Payroll_/App.config
@@ -17,22 +17,22 @@
                 <value>TwAzW8XScshn00ffLiLsQ9JfzbLvQd2w</value>
             </setting>
             <setting name="Mandaluyong" serializeAs="String">
-                <value>IfHugVRq8Eb4guCho2OvQBT3MDwkfZRV8aygaM/AmGY=</value>
+                <value>121.58.217.123</value>
             </setting>
             <setting name="Makati" serializeAs="String">
-                <value>RpeFMfToTp6iw3cr1Q893Z++WxO+6b1e</value>
+                <value>10.10.9.158</value>
             </setting>
             <setting name="ODBC" serializeAs="String">
                 <value>ADMX</value>
-            </setting>
-            <setting name="AMS" serializeAs="String">
-                <value>ADMXSRV04</value>
             </setting>
             <setting name="AMS_Username" serializeAs="String">
                 <value>sysdev</value>
             </setting>
             <setting name="AMS_Password" serializeAs="String">
                 <value>Admx5299</value>
+            </setting>
+            <setting name="Cebu" serializeAs="String">
+                <value>112.198.55.209</value>
             </setting>
         </Payroll_.Properties.Settings>
     </userSettings>
